--- a/pharmacy/pom.xml
+++ b/pharmacy/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.example</groupId>
         <artifactId>shop</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
 
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>shop-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0</version>
        </dependency>
     </dependencies>
 
@@ -31,11 +31,12 @@
         <profile>
             <id>PROM</id>
             <build>
+                <finalName>drugstore</finalName>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-assembly-plugin</artifactId>
-                        <version>3.4.2</version>
+                        <version>${assembly-plugin.version}</version>
                         <configuration>
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -43,7 +44,7 @@
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
-                                    <mainClass>com.javaacademy.pharmacy.Runner</mainClass>
+                                    <mainClass>com.javaacademy.shop.drug.Runner</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
@@ -63,11 +64,12 @@
         <profile>
             <id>TEST</id>
             <build>
+                <finalName>drugstore</finalName>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-assembly-plugin</artifactId>
-                        <version>3.4.2</version>
+                        <version>${assembly-plugin.version}</version>
                         <configuration>
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -75,7 +77,7 @@
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
-                                    <mainClass>com.javaacademy.pharmacy.RunnerTest</mainClass>
+                                    <mainClass>com.javaacademy.shop.drug.RunnerTest</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
