--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>shop</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -22,6 +22,7 @@
         <lombok.version>1.18.34</lombok.version>
         <logback.version>1.5.11</logback.version>
         <slf4j.version>2.0.16</slf4j.version>
+        <assembly-plugin.version>3.4.2</assembly-plugin.version>
     </properties>
 
     <dependencies>
@@ -47,5 +48,13 @@
             <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
+
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
 
 </project>
