--- a/shop-food/pom.xml
+++ b/shop-food/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.example</groupId>
         <artifactId>shop</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
 
@@ -22,16 +22,17 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>shop-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
     <build>
+        <finalName>shop-food</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.4.2</version>
+                <version>${assembly-plugin.version}</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -39,7 +40,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.javaacademy.shop_food.Runner</mainClass>
+                            <mainClass>com.javaacademy.shop.Runner</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
